--- a/moon.html
+++ b/moon.html
@@ -1,3 +1,212 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Valentine</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+
+<style>
+*{box-sizing:border-box;user-select:none;}
+
+body{
+  margin:0;
+  height:100vh;
+  overflow:hidden;
+  background: radial-gradient(circle at 50% 20%, #2b2e4a, #0f0f1a 70%);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  color:white;
+  font-family:'Quicksand', sans-serif;
+}
+
+/* Moon */
+.moon{
+  position:absolute;
+  top:60px;
+  width:130px;
+  height:130px;
+  background: radial-gradient(circle, #fff 40%, #ddd 70%);
+  border-radius:50%;
+  box-shadow:0 0 40px rgba(255,255,255,0.6);
+}
+
+/* Stars */
+.star{
+  position:absolute;
+  width:2px;
+  height:2px;
+  background:white;
+  border-radius:50%;
+  animation: twinkle 2s infinite alternate;
+}
+@keyframes twinkle{from{opacity:0.2;}to{opacity:1;}}
+
+/* Hearts */
+.heart{
+  position:absolute;
+  font-size:18px;
+  animation: floatUp 6s linear infinite;
+  opacity:0.6;
+}
+@keyframes floatUp{
+  from{transform:translateY(100vh);}
+  to{transform:translateY(-40vh);}
+}
+
+/* Paw */
+.cat{
+  position:absolute;
+  bottom:15px;
+  right:20px;
+  font-size:26px;
+  opacity:0.6;
+}
+
+.container{
+  width:100%;
+  padding:20px;
+  text-align:center;
+}
+
+h1{
+  margin-top:180px;
+  font-family:'Playfair Display', serif;
+  font-size:1.6rem;
+  color:#ffd6f5;
+  transition:1.5s;
+}
+
+.fade-out{
+  opacity:0;
+  transform:translateY(-20px);
+}
+
+button{
+  width:75%;
+  max-width:300px;
+  padding:14px;
+  font-size:1rem;
+  border:none;
+  border-radius:50px;
+  margin:25px auto;
+  display:block;
+  transition:0.3s;
+}
+
+#yes{
+  background:#ff4d8d;
+  color:white;
+  font-weight:600;
+}
+
+#no{
+  background:#e0e0e0;
+  color:#333;
+  position:absolute;
+  left:50%;
+  top:72%;
+  transform:translate(-50%,-50%);
+}
+
+.final{
+  display:none;
+  margin-top:100px;
+  font-size:1.1rem;
+  min-height:100px;
+}
+
+.extra-btn{
+  background:#ffd6f5;
+  color:#2b2e4a;
+  font-weight:600;
+  margin-top:25px;
+}
+
+.typing::after{
+  content:"|";
+  animation:blink 1s infinite;
+}
+@keyframes blink{
+  0%,50%,100%{opacity:1;}
+  25%,75%{opacity:0;}
+}
+</style>
+</head>
+
+<body>
+
+<audio id="bgm">
+  <source src="./your-music-file.mp3" type="audio/mpeg">
+</audio>
+
+<div class="moon"></div>
+<div class="cat">🐾</div>
+
+<div class="container">
+  <h1 id="mainTitle">💘 Will you be my Valentine?</h1>
+
+  <button id="yes">YES 💖</button>
+  <button id="no">NO 😌</button>
+
+  <div class="final">
+    <div id="sequence" class="typing"></div>
+    <div id="extra"></div>
+  </div>
+</div>
+
+<script>
+const noBtn=document.getElementById("no");
+const yesBtn=document.getElementById("yes");
+const finalMsg=document.querySelector(".final");
+const sequence=document.getElementById("sequence");
+const extra=document.getElementById("extra");
+const bgm=document.getElementById("bgm");
+const mainTitle=document.getElementById("mainTitle");
+
+bgm.volume=0;
+
+/* Stars */
+for(let i=0;i<70;i++){
+  let star=document.createElement("div");
+  star.className="star";
+  star.style.top=Math.random()*100+"%";
+  star.style.left=Math.random()*100+"%";
+  document.body.appendChild(star);
+}
+
+/* Hearts */
+for(let i=0;i<8;i++){
+  let heart=document.createElement("div");
+  heart.className="heart";
+  heart.innerText="💗";
+  heart.style.left=Math.random()*100+"%";
+  heart.style.animationDuration=(4+Math.random()*4)+"s";
+  document.body.appendChild(heart);
+}
+
+/* 🔥 Better mobile escape */
+function escapeFinger(){
+  const padding = 40;
+  const maxX = window.innerWidth - noBtn.offsetWidth - padding;
+  const maxY = window.innerHeight - noBtn.offsetHeight - padding;
+
+  const x = Math.random() * maxX;
+  const y = Math.random() * maxY;
+
+  noBtn.style.left = x + "px";
+  noBtn.style.top = y + "px";
+}
+
+/* Works for both desktop and mobile */
+noBtn.addEventListener("mouseover",escapeFinger);
+noBtn.addEventListener("touchstart",function(e){
+  e.preventDefault();
+  escapeFinger();
+});
+
 /* Typing */
 function typeText(text,callback){
   sequence.innerHTML="";
